# RAGA_EVALUATION_LLM

./: dataset.json  pyproject.toml  raga_eval.py  report.xlsx
